--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </tr>
    </table>
     <table border="1" cellpadding="10" bordercolor="green" width="70%">
-     <caption> ROYAL ELECTRONICS </caption>
+     <caption> ROYAL INDUSTRIAL ELECTRONICS </caption>
      
      <tr>
         <td> 
@@ -99,6 +99,7 @@
  <input type="month">
  <br>
  <input type="week">
+
 
 </body>
 </html>
